--- a/Lab2/static/SmartPhoneProducts1/products-style.css
+++ b/Lab2/static/SmartPhoneProducts1/products-style.css
@@ -20,7 +20,7 @@ div {
 }
 
 main {
-    background-image: url("./Images/phone_globe.jpg");
+    background-image: image("phone_globe.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
