--- a/Lab3/SmartPhoneProducts1/products-style.css
+++ b/Lab3/SmartPhoneProducts1/products-style.css
@@ -40,4 +40,17 @@ body>div {
    
 }
 
+.rotate img
+{
+  animation: rotation .3s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
 
