--- a/Sebastian_Nicholas_Assignment1/public/invoice.css
+++ b/Sebastian_Nicholas_Assignment1/public/invoice.css
@@ -4,7 +4,7 @@
 body {
     font-size: large;
     text-align: center;
-    background-color: aqua;
+    background-color: ivory;
 }
 /*Table*/
 table {
