--- a/Sebastian_Nicholas_Assignment1/public/invoice.css
+++ b/Sebastian_Nicholas_Assignment1/public/invoice.css
@@ -4,7 +4,7 @@
 body {
     font-size: large;
     text-align: center;
-    background-color: ivory;
+    background-color: rgb(194, 194, 135);
 }
 /*Table*/
 table {
@@ -12,3 +12,4 @@ table {
     margin: auto;
     
 }
+
