mail and session update

--- a/Sebastian_Nicholas_Assignment3/public/products.css
+++ b/Sebastian_Nicholas_Assignment3/public/products.css
@@ -1,6 +1,10 @@
 /* Nicholas Sebastian */
 /*CSS for Prodcuts_Display*/
 
+.w3-top {
+    position:relative;
+    display: inline-block;
+}
 
 img {
     width: 250px; 
